unpackaged/main/default/objects/FSL_Clearing_Queue__mdt/FSL_Clearing_Queue__mdt.object-meta.xml
<CustomObject>
    <description>Queue where cleared calls stay for x number of minutes until cleared to D3/IRAS.</description>
    <label>FSL Clearing Queue</label>
    <pluralLabel>FSL Clearing Queues</pluralLabel>
</CustomObject>