unpackaged/main/default/objects/FSL_Clearing_Queue__mdt/fields/Max_consecutive_fails__c.field-meta.xml
<CustomField>
    <fullName>Max_consecutive_fails__c</fullName>
    <description>This field defines how many calls can fail to clear before the clear queue determines it to be due to an outage and halts processing.</description>
    <label>Maximum consecutive call failures</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>