unpackaged/main/default/objects/FSL_Clearing_Queue__mdt/fields/Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Retries__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum Number of Clear Retry Attempts</description>
    <label>Maximum Retries</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>