unpackaged/main/default/objects/FSL_Clearing_Queue__mdt/fields/Max_Threads__c.field-meta.xml
<CustomField>
    <fullName>Max_Threads__c</fullName>
    <description>The maximum amount of concurrent threads created to process calls in the clear queue. Each thread will try to clear up to the configured Maximum WorkOrders.</description>
    <label>Maximum Threads</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>