unpackaged/main/default/objects/FSL_Clearing_Queue__mdt/fields/Max_Wait_Time_secs__c.field-meta.xml
<CustomField>
    <fullName>Max_Wait_Time_secs__c</fullName>
    <defaultValue>180</defaultValue>
    <description>Maximum Time in queue to capture mileage</description>
    <label>Maximum Wait Time (seconds)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>