unpackaged/main/default/objects/FSL_Clearing_Queue__mdt/fields/Max_WorkOrders__c.field-meta.xml
<CustomField>
    <fullName>Max_WorkOrders__c</fullName>
    <description>This is to set the maximum number of work orders that will be cleared when the clear queue is processed</description>
    <label>Max WorkOrders</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>