unpackaged/main/default/objects/FSL_Clearing_Queue__mdt/fields/Outage_detection_window_minutes__c.field-meta.xml
<CustomField>
    <fullName>Outage_detection_window_minutes__c</fullName>
    <description>This field defines the maximum window of time the clear queue will look for consecutive failures</description>
    <label>Outage detection window (minutes)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>